# emostack_model

./: .pdm-python  .replit  DbSrv.py  OpenAiSrv.py  README.md  emostack.db  main.py  pdm.toml  pyproject.toml  requirements.txt  showDb.py  test.py
domain/: AccessibleStack.py  Chat.py  ChatProcess.py  ChatUi.py  CreateEmotionProcess.py  EmoRules.py  EmoStack.py  EmoThought.py  EmoThoughtTrigger.py  MotivStack.py  Motivation.py  StaringMotives.py
examples/: __init__.py  dbReading.py  simple1.py
infrastructure/: AiSrv.py  ChatUi.py  DbSrv.py  EmoThougtRepo.py  EmoThougthsRepo.py
repository/: EmoThougtsRepo.py
services/: Singleton.py
