[project]
name = "EmoStack"
version = "0.1.0"
description = ""
authors = [
    { name = "Eliza" }
]
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.41,<3.0.0",
    "gradio>=5.34.1,<6.0.0",
    "openai>=1.88.0,<2.0.0",
    "sqlite-web>=0.6.4,<0.7.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "tabulate"
]

[tool.pdm]
# nic tu nie trzeba, venv konfigurujemy w .pdm.toml

[tool.pdm.scripts]
start = { shell = "pdm install && python main.py" }
main = "python main.py"
db = "sqlite_web emostack.db"